--- a/data/description
+++ b/data/description
@@ -1,1 +1,28 @@
-В этой папке содержатся файлы, на основе которых готовятся файлы для обучения моделей. Это ещё не конечные файлы обучения. Их ещё предстоит получить путём обработки кодами, собранными в другой папке.
+В этой папке содержатся файлы, на основе которых готовятся файлы для обучения моделей. Это ещё не конечные файлы обучения. 
+Их ещё предстоит получить путём обработки кодами, собранными в другой папке.
+Подробнее о каждом файле:
+Имя файла | тип геометрии     | содержимое   | работа со столбцами
+__________________________________________________________________
+bench     | точка (Point)     | скамейки     | нет/ ---
+__________________________________________________________________
+bus_stop  | точка (Point)     | остановки    | нет/ ---
+__________________________________________________________________
+crossing  | точка (Point)     | переходы     | нет/ ---
+__________________________________________________________________
+parking   | точка (Point)     | парковки     | нет/ ---
+__________________________________________________________________
+roads     | линия (LineString)| дороги       | highway
+__________________________________________________________________
+scurb     | точка (Point)     | кустарник    | нет/ ---
+__________________________________________________________________
+shop      | точка (Point)     | магазины     | shop
+__________________________________________________________________
+subway    | точка (Point)     | ст. метро    | нет/ ---
+__________________________________________________________________
+tree      | точка (Point)     | деревья      | нет/ ---
+__________________________________________________________________
+urna      | точка (Point)     | мусорные кон.| нет/ ---
+__________________________________________________________________
+polygons  | полигон (Polugon) | объекты среды| все/ all
+
+ Если в столбце "работа со столбцами" написано "нет/ ---", значит, мы не используем их в работе. Это не значит, что вы не имеете на это права. Имеете.
